Allow to get one route by route id
